# pico_lvgl_ili9341_GUI_guider_display

./: .gitmodules  CMakeLists.txt  DisplayTest.c  LICENSE  README.md  Readme.md  lv_conf.h
lib/: .editorconfig  CMakeLists.txt
lib/custom/: CMakeLists.txt
lib/porting/: CMakeLists.txt  lv_port_disp.c
